Add instructions for agent configuration

--- a/opencode.jsonc
+++ b/opencode.jsonc
@@ -21,5 +21,6 @@
       "command": ["docker", "run", "-i", "--rm", "mcp/sequentialthinking"],
       "type": "local"
     }
-  }
+  },
+  "instructions": [".ai/rules/**/AGENTS.md"]
 }
